--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -22,5 +22,23 @@
         ]
       }
     }
+  },
+  "api": {
+    "notesApp": {
+      "service": "AppSync",
+      "providerPlugin": "awscloudformation",
+      "output": {
+        "authConfig": {
+          "defaultAuthentication": {
+            "authenticationType": "API_KEY",
+            "apiKeyConfig": {
+              "apiKeyExpirationDays": 15,
+              "description": "demo"
+            }
+          },
+          "additionalAuthenticationProviders": []
+        }
+      }
+    }
   }
 }
