--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -40,5 +40,11 @@
         }
       }
     }
+  },
+  "storage": {
+    "photobucketnotesapp": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation"
+    }
   }
 }
